--- a/index.html
+++ b/index.html
@@ -44,9 +44,10 @@
     <p>
       Graduate Student at Lewis University.<br />
       I am a highly driven life-long learner working to achieve my Master's in Computer Science at Lewis University.<br>
-      My specialization at Lewis University is Artifical Intelligence, because I believe that AI, in every facet can be used to improve the quality of life.<br>
+      My concentration at Lewis University is Software Engineering. My current GPA is 5.65.<br>
       <br>
-      I completed my Bachelor's degree in Information Technology from Capella University, with a GPA of 3.75.
+      I completed my Bachelor's degree in Information Technology from Capella University, with a GPA of 3.75.<br>
+      I have a Microsoft Technology Asscoiate certification in Database Fundamentals.
     </p>
   </section>
   <section id="skills">
@@ -102,6 +103,8 @@
     <br>
       <h2>Many of my projects are viewable from my GitHub!</h2>
       <p><a href="https://github.com/nFawcettPortfolio/">Check out my GitHub!</a></p>
+      <br>
+      <p>I try to keep my github portfolio updated, so please check back!</p>
       <br>
       <p>I have many projects that were schoolwork and thus aren't on my GitHub.<br>
       Feel free to contact me about other projects outside my Github.</p>
