--- a/index.html
+++ b/index.html
@@ -44,7 +44,9 @@
     <p>
       Graduate Student at Lewis University.<br />
       I am a highly driven life-long learner working to achieve my Master's in Computer Science at Lewis University.<br>
-      My concentration at Lewis University is Software Engineering. My current GPA is 5.65.<br>
+      My concentration at Lewis University is Software Engineering. My current GPA is 3.65.<br>
+      <br>
+      Current Courses: Object Oriented Programming, Algorithms and Data Structures
       <br>
       I completed my Bachelor's degree in Information Technology from Capella University, with a GPA of 3.75.<br>
       I have a Microsoft Technology Asscoiate certification in Database Fundamentals.
